# CV-Generator

./: .env.example  .gitignore  Makefile  docker-compose.sonar.yml  docker-compose.yml  package-lock.json  readme.md
.claude/: settings.local.json
ai_agents/: .gitignore  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  sonar-project.properties
ai_agents/app/: .gitignore  main.py
ai_agents/app/agents/: cv_filler.py  cv_optimizer.py  email_sender.py  job_extractor.py  rag_search.py
ai_agents/app/agents/contact_agent/: __init__.py  agent.py  prompt.py  run.py  schemas.py  tools.py
ai_agents/app/agents/cv_optimizer/: __init__.py  agent.py  schemas.py
ai_agents/app/api/: agents.py
ai_agents/app/core/: backend_client.py  config.py  llm.py
ai_agents/app/models/: cv_model.py  job_model.py  user_model.py  workflow_model.py
ai_agents/app/workflows/: context.py  cv_generation.py  dynamic_orchestrator.py
ai_agents/services/common-tools/: .env.example  pyproject.toml  test_pdf_tools.py
ai_agents/services/contact-agent/: .env.example  Dockerfile  pytest.ini  requirements.txt  run_test.py
ai_agents/services/cv-optimizer/: .env.example  Dockerfile  docker-compose.yaml  requirements.txt  temp_CV_SOMIA_JDIAVF.html  temp_CV_Soso.tex
ai_agents/services/job-crawler/: .env.example  Dockerfile  requirements.txt
ai_agents/services/job-extractor/: .env.example  Dockerfile  requirements.txt
ai_agents/services/orchestrator/: .env.example  Dockerfile  requirements.txt
ai_agents/services/search-agent/: .env.example  Dockerfile  requirements.txt
ai_agents/services/template-agent/: .env.example  Dockerfile  requirements.txt
(+762 files in other folders)
