[project]
name = "ai-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.135.1",
    "groq>=0.37.1",
    "langchain>=1.2.12",
    "langchain-groq>=1.1.2",
    "langchain-openai>=1.1.11",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "uvicorn>=0.41.0",
]
