[project]
name = "cv-common-tools"
version = "0.1.0"
description = "Shared utilities, LLM clients, config, and models for CV microservices"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.27.0",
    "langchain-groq>=0.1.0",
    "langchain-openai>=0.1.0",
    "python-dotenv>=1.0",
    "weasyprint>=62.0",
    "minio>=7.2.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]